kubernetes/apps/spark/spark-history-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-history-server
  namespace: spark
  labels:
    app: spark-history-server
spec:
  type: ClusterIP
  ports:
    - port: 18080
      targetPort: http
      protocol: TCP
      name: http
    - port: 4040
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app: spark-history-server
